--- a/application/assets/css/web-sample.css
+++ b/application/assets/css/web-sample.css
@@ -1,31 +1,148 @@
- .container {
-    float: left;
-    margin: 0 10px;
+/* Color palette: http://flatuicolors.com/ */
+
+
+body {
+    background-color: #ecf0f1; 
+    text-align: center;
+    font-family: "Trebuchet MS";
 }
 
-.video {
-    width: 300px;
-    height: 200px;
+.main-wrap {
+    width: 1350px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+/*--- Nav ---*/
+.nav {
+    background-color: #2c3e50;
+    padding-left: 20px;
+    width: 1330px;
+    height: 35px;
+    top: -18px;
+    z-index: 100000;
+    padding-top: 15px;
+}
+
+.logo {
+    max-height: 28px;
+    width: auto;
+}
+
+#position-top {
+    position: absolute;
+}
+
+#position-fixed {
+    position: fixed;
+}
+
+.nav ul {
+    display: none;
+    font-size: 14px;
+    width: auto;
+}
+
+.nav > li {
+    display: inline;
+    padding-right: 20px;
+    position: relative;
+    float: left;
+}
+
+.nav li a {
+    color: #2980b9;
+    text-decoration: none;
+}
+
+.nav li a:hover {
+    color: #16a085;
+}
+
+.nav li > ul {
+    position: absolute;
+    display: none;
+    top: 20px;
+    left: 0px; 
+    padding-left: 10px;
+}
+
+.nav li:hover > ul {
+    display: block;
+    padding-top: 10px;
+}
+
+.nav li > ul li {
+    display: block;
+    margin-top: 5px;
+}
+
+.nav ul ul {
+    margin-left: 50px;
+    padding-left: 50px;
+}
+
+.nav .right {
+    float: right;
+}
+
+/*--- End Nav ---*/
+.main, .extra-video-containter {
+    padding: 10px;
 }
 
 .main {
-    float: left;
+    background: #bdc3c7;
+    margin-top: 30px;
+    z-index: 0;
+    padding-top: 50px;
+}
+
+.extra-video-containter {
+}
+
+.trending-video-container, .related-video-container {
+
+}
+
+.related-video-container {
+
+}
+
+.trending-video-container {
+
+}
+
+.caption {
+    margin-top: 0px;
+}
+
+.video-container {
+    margin: 0 10px;
+    display: inline-block;
+}
+
+.video {
+    width: 304px;
+    height: 190px;
 }
 
 .player {
     width: 920px;
-    height: 400px;
+    height: 575px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 2px;
 }
 
-.side_container {
-    margin-left: 40px;
+.player div {
 }
 
-.related_video_container {
-    margin-top: 100px;
-    width: 100%;
-}
-
-.trending_video_container {
-    float: left;
+.player-description {
+    width: 920px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
